[package]
name = "roblox_stream_sniper"
version = "0.1.0"
authors = ["fyz#7690"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "*", features = ["json"] }
# reqwest = { version = "*", features = ["json"] }
dirs = "2.0.2"
serde_json = "1.0.48"
